# gh-tf-mod

./: .gitignore  .tool-versions  Cargo.toml  LICENSE  README.md  gh-tf-mod
.github/workflows/: build.yml  release.yml
script/: build.sh  install.sh  release.sh
scripts/: install.sh  release.sh
src/: config.rs  gh.rs  main.rs  tables.rs
