[package]
name = "gh-tf-mod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt    = "0.3.26"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_yaml   = "0.8.23"
serde_json = "1.0.78"
log = "0.4.14"
handlebars = "4.2.1"
prettytable-rs = "0.8.0"
regex = "1.5.4"
merge = "0.1.0"
anyhow = "1.0.54"

[dev-dependencies]
assert_cmd = "2.0.4"
anyhow = "1.0.53"
